[gd_scene load_steps=2 format=3 uid="uid://cotl4sxlfteid"]

[ext_resource type="Script" path="res://addons/atlas_painter/atlas_painter_dock.gd" id="1_fivhe"]

[node name="Atlas Painter" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
script = ExtResource("1_fivhe")

[node name="ResetBtn" type="Button" parent="."]
layout_mode = 2
text = "Reset"

[node name="Strength" type="Label" parent="."]
layout_mode = 2
text = "Strength
"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="StrengthLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "0"

[node name="StrengthSlider" type="HSlider" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 255.0
rounded = true

[node name="Size" type="Label" parent="."]
layout_mode = 2
text = "Size
"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SizeLabel" type="Label" parent="HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "0"

[node name="SizeSlider" type="HSlider" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 250.0
rounded = true

[node name="Fade" type="Label" parent="."]
layout_mode = 2
text = "Fade"

[node name="HBoxContainer4" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="FadeLabel" type="Label" parent="HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "0"

[node name="FadeSlider" type="HSlider" parent="HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.1
max_value = 12.0
step = 0.05
value = 0.1

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TextureSelect" type="OptionButton" parent="HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="ResetBtn" to="." method="_on_reset_btn_pressed"]
[connection signal="value_changed" from="HBoxContainer/StrengthSlider" to="." method="_on_strength_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer2/SizeSlider" to="." method="_on_size_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer4/FadeSlider" to="." method="_on_fade_slider_value_changed"]
[connection signal="item_selected" from="HBoxContainer3/TextureSelect" to="." method="_on_texture_select_main_x_item_selected"]
